# ROS_hack

./: README.md  ROS常用命令.md
bag/: 2020-03-24-16-04-42.bag  2020-03-24-16-05-55.bag  eigtht.bag
bag/robot_model_and_robot_state/: CMakeLists.txt
bag/robot_model_and_robot_state/src/: robot_model_and_robot_state_tutorial.cpp
bmirobot_pkg/bmi_gui/: CMakeLists.txt  package.xml
bmirobot_pkg/bmi_gui/src/: bmi_gui.cpp  url
bmirobot_pkg/bmi_gui/srv/: displayMode.srv
bmirobot_pkg/bmirobot_calibration/: computeMarkerPose.py  jointRecord.txt  record.txt  rigid_tranform_3d.py
bmirobot_pkg/bmirobot_calibration/bmirobot_calibration/: CMakeLists.txt  package.xml
bmirobot_pkg/bmirobot_calibration/msg_record/: CMakeLists.txt  package.xml
bmirobot_pkg/bmirobot_control/: CMakeLists.txt  package.xml
bmirobot_pkg/bmirobot_control/config/: bmirobot_control (copy).yaml  bmirobot_control (陈鹏's conflicted copy 2018-11-25).yaml  bmirobot_control.yaml  bmirobot_control_cart.yaml  bmirobot_control_group.yaml  bmirobot_control_pr2.yaml  bmirobot_control_pr22.yaml  bmirobot_control_trajectory.yaml  bmirobotv5_control_cart.yaml  robotarm_control.yaml
bmirobot_pkg/bmirobot_control/launch/: bmirobot_control (copy).launch  bmirobot_control.launch  bmirobot_control_cart.launch  bmirobot_control_group.launch  bmirobot_control_gui.launch  bmirobot_control_pr2.launch  bmirobot_control_trajectory.launch  bmirobotv4_control.launch  bmirobotv4_control_gui.launch  bmirobotv5_control.launch  bmirobotv5_control_cart.launch  bmirobotv5_control_gui.launch  bmirobotv5_two_control.launch  bmirobotv5_two_control_group.launch
bmirobot_pkg/bmirobot_control_cart/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  package.xml  ros_control_plugins.xml
bmirobot_pkg/bmirobot_control_cart/include/bmirobot_control_cart/: bmirobot_control_cart.h  bmirobot_control_cart_impl.h  hardware_interface_adapter.h  init_joint_trajectory.h  joint_trajectory_msg_utils.h  joint_trajectory_segment.h  tolerances.h
bmirobot_pkg/bmirobot_control_cart/src/: bmirobot_control_cart.cpp
bmirobot_pkg/bmirobot_control_cart/test/: bmirobot_control_cart_test.cpp  init_joint_trajectory_test.cpp  joint_trajectory_controller.test  joint_trajectory_controller_test.cpp  joint_trajectory_msg_utils_test.cpp  joint_trajectory_segment_test.cpp  rrbot_controllers.yaml  tolerances.test  tolerances_test.cpp
bmirobot_pkg/bmirobot_description/: CMakeLists.txt  old.xml  package.xml  pr2.urdf  robot11.urdf  test_robot.urdf
bmirobot_pkg/bmirobot_description/urdf/: bmirobot (another copy).xacro  bmirobot (copy).xacro  bmirobot.gazebo  bmirobot.urdf  bmirobot_V1.xacro  bmirobot_V2.xacro  bmirobot_V3.xacro  bmirobot_V4.xacro  bmirobot_V5.xacro  bmirobot_gazebo.xacro  bmirobot_zhs.xacro  bmirobotv5.gazebo  bmirobotv5_gazebo.xacro  robotarm_description.xacro  robotarm_leftarm.xacro  robotarm_rightarm.xacro  temp1.urdf
bmirobot_pkg/bmirobot_gazebo/: CMakeLists.txt  package.xml
bmirobot_pkg/bmirobot_gazebo/launch/: bmirobot.launch  bmirobot_gazebo_control.launch  bmirobot_gazebo_moveit.launch  bmirobot_two_world.launch  bmirobotv5.launch
bmirobot_pkg/bmirobot_gazebo/worlds/: bmirobot.world  bmirobot2.world  bmirobot3.world
bmirobot_pkg/bmirobot_hw/: CMakeLists.txt  package.xml
bmirobot_pkg/bmirobot_hw/include/bmirobot_hw/: bmirobot.h  bmirobot_V4.h  bmirobot_V5.h  bmirobot_zhs.h  kalman_filter.h
bmirobot_pkg/bmirobot_hw/launch/: bmirobot_ethernet.launch  bmirobot_hw.launch  bmirobot_hw_V2.launch  bmirobot_hw_cameraTF.launch  bmirobot_proximity.launch  bmirobot_zhs_left.launch  bmirobot_zhs_right.launch  bmirobot_zhs_two.launch  bmirobotv4_hw.launch  bmirobotv51_ethernet.launch  bmirobotv51_hw.launch  bmirobotv51_right.launch  bmirobotv51_two.launch  bmirobotv52_hw.launch  bmirobotv5_hw.launch  bmirobotv5_test.launch
bmirobot_pkg/bmirobot_hw/src/: bmirobot.cpp  bmirobot_UDP.cpp  bmirobot_V2.cpp  bmirobot_V4.cpp  bmirobot_V5.cpp  bmirobot_V51.cpp  bmirobot_V51_left.cpp  bmirobot_V51_main.cpp  bmirobot_V51_right.cpp  bmirobot_V52.cpp  bmirobot_V5_test.cpp  bmirobot_backup.cpp  bmirobot_ethernet.cpp  bmirobot_ethernet_left.cpp  bmirobot_ethernet_right.cpp  bmirobot_proximity.cpp  bmirobot_proximity1.cpp  bmirobot_zhs_left.cpp  bmirobot_zhs_main.cpp  bmirobot_zhs_right.cpp  kalman_filter.cpp  main.cpp
bmirobot_pkg/bmirobot_msg/: CMakeLists.txt  package.xml
bmirobot_pkg/bmirobot_msg/msg/: Robot_MJfd.msg  Robot_ctr.msg  Robot_distance.msg  Robot_fdctr (copy).msg  Robot_fdctr.msg  Robot_fdstatus.msg  Robot_jointfd.msg  Robot_mpu.msg
bmirobot_pkg/bmirobot_py/: CMakeLists.txt  package.xml
bmirobot_pkg/bmirobot_py/launch/: bmirobot_rviz_control.launch  move_group_interface_tutorial.launch  python_node.launch  robot_model_and_robot_state_tutorial.launch
bmirobot_pkg/bmirobot_py/src/: ik_csv.py  ik_grasp_touch.py  ik_touch.py  move_group_interface_tutorial.cpp  move_group_left.py  move_group_multi_motions.py  move_group_python_interface.py  move_group_tele_key.py  move_group_tele_key2.py  move_group_touch.py  moveit_IK.py  moveit_touch_test.py  multi_motions.py  plot_touch_data.py  random_ik_test.py  robot_model_and_robot_state_tutorial.cpp  trajectory_1.csv  trajectory_3.csv  udp_android.py  udp_broacast.py  udp_client.py  udp_lr.py  user_interface.py  util_functions.py
bmirobot_pkg/bmirobot_rviz/bmirobot/: CMakeLists.txt  package.xml
bmirobot_pkg/bmirobot_rviz/bmirobot_zhs/: CMakeLists.txt  package.xml
bmirobot_pkg/bmirobot_rviz/bmirobotv4/: CMakeLists.txt  package.xml
bmirobot_pkg/bmirobot_rviz/robotarm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
bmirobot_pkg/bmirobot_visual_detection/: CMakeLists.txt  package.xml
bmirobot_pkg/bmirobot_visual_detection/launch/: detection.launch  (+1 more)
bmirobot_pkg/moveit_code/: README.md  bmirobot_IK.cpp  bmirobot_IK.launch  bmirobot_IK_touch.cpp  bmirobot_model_and_state.launch
bmirobot_pkg/robotarm_control/: CMakeLists.txt  package.xml
bmirobot_pkg/test_robot/: CMakeLists.txt  package.xml  stick.scene  stick.stl  test_robot.gv  test_robot.urdf
software/: README.md
(+170 files in other folders)
